# FreightFrenzy

./: README.md  build.common.gradle  build.gradle  gradle.properties
Blocks/: build.gradle
FtcCommon/: build.gradle
FtcCommon/src/main/assets/: RobotConfig.xsd
FtcCommon/src/main/java/com/qualcomm/ftccommon/: CommandList.java  FtcAdvancedRCSettingsActivity.java  FtcEventLoop.java  FtcEventLoopBase.java  FtcEventLoopHandler.java  FtcLynxModuleAddressUpdateActivity.java  FtcRobotControllerService.java  FtcRobotControllerSettingsActivity.java  FtcWifiDirectChannelSelectorActivity.java  (+3 more)
FtcCommon/src/main/res/layout/: activity_generic_settings.xml  activity_program_and_manage.xml
FtcCommon/src/main/res/xml/: ftc_about_activity.xml  ftc_about_activity_rc.xml
FtcRobotController/: build.gradle
FtcRobotController/src/main/: AndroidManifest.xml
FtcRobotController/src/main/res/layout/: activity_ftc_controller.xml
Hardware/: build.gradle
Inspection/: build.gradle
OnBotJava/src/main/: AndroidManifest.xml
OpenCV/: build.gradle
OpenRC/: build.gradle
RobotCore/: build.gradle
RobotServer/: build.gradle
TeamCode/: CMakeLists.txt  build.gradle
TeamCode/libs/: OpenCV-Android-SDK-debug.aar
TeamCode/src/main/cpp/: native-lib.cpp  native_pipeline.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Vision.java  VisionTest.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/vision/: CameraDaemon.java  NativePipeline.java  Pipeline.java  Vision.java
Tfod/: CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+218 files in other folders)
